# ibl-smartspim-conversion-launcher

./: .gitignore  README.md  pyproject.toml
.codeocean/: environment.json
code/: demo.ipynb  extension.py  neuroglancer_state.json  run  sandbox.ipynb  streamlit_app.py
environment/: Dockerfile  environment.yml
metadata/: metadata.yml
