[project]
name = "ibl-smartspim-conversion-launcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aind-codeocean-pipeline-monitor==0.5.2",
    "aind-session==0.3.22",
    "codeocean==0.12.0",
    "pandas==2.2.3",
    "panel==1.5.4",
    "streamlit==1.40.2"
]
